docs: explain Java 25 requirement and FFM API stabilization
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>